tests/no_compile/duplicate_field_attr.stderr
error: `#[mmio(...)]` found second write argument
 --> tests/no_compile/duplicate_field_attr.rs:6:5
  |
6 |     #[mmio(Write, Read, Write)]
  |     ^

error[E0599]: no function or associated item named `new_mmio` found for struct `Uart` in the current scope
  --> tests/no_compile/duplicate_field_attr.rs:14:40
   |
4  | struct Uart {
   | ----------- function or associated item `new_mmio` not found for this struct
...
14 |     let mut mmio_uart = unsafe { Uart::new_mmio(core::ptr::addr_of_mut!(uart)) };
   |                                        ^^^^^^^^ function or associated item not found in `Uart`
